// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Checkbox /> Snapshots should match snapshot with disabled prop 1`] = `
.c4 {
  border: 0;
  box-shadow: inset -1px -1px 0 0  #dfdfdf , inset 1px 1px 0 0  #848584 , inset -2px -2px 0 0  #fefefe , inset 2px 2px 0 0  #0a0a0a;
  width: 12px;
  height: 12px;
  left: 0;
  display: inline-block;
  position: absolute;
  background-color: #ffffff;
  background-repeat: no-repeat;
  background-position: center center;
  background-size: 7px 7px;
  margin-top: 2px;
}

.c6 {
  padding: 1px;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
}

.c2 {
  width: 12px;
  height: 12px;
  margin: 0;
  position: absolute;
  top: 0;
  left: 0;
  opacity: 0;
}

.c2:focus ~ .c5,
.c2:active ~ .c5 {
  border-width: 1px;
  border-style: dotted;
  padding: 0;
}

.c2:disabled {
  color: #848584;
}

.c2:checked + .c3 {
  background-image: url('test-file-stub');
}

.c2:checked .c1:disabled + .c3 {
  background-image: url('test-file-stub'),url('test-file-stub');
  background-size: 7px 7px,2px 2px;
}

.c2:disabled + .c3 {
  background-color: #dfdfdf;
}

.c0 {
  display: inline-block;
  height: 15px;
  line-height: 1.5;
  position: relative;
  margin: 4px 0px;
  padding-left: 20px;
  color: #0a0a0a;
  text-shadow: 0.5px 0.5px #dfdfdf;
}

<div>
  <label
    class="c0"
    disabled=""
  >
    <input
      class="c1 c2"
      disabled=""
      type="checkbox"
    />
    <span
      class="c3 c4"
    />
    <span
      class="c5 c6"
    />
  </label>
</div>
`;

exports[`<Checkbox /> Snapshots should match snapshot without props 1`] = `
.c4 {
  border: 0;
  box-shadow: inset -1px -1px 0 0  #dfdfdf , inset 1px 1px 0 0  #848584 , inset -2px -2px 0 0  #fefefe , inset 2px 2px 0 0  #0a0a0a;
  width: 12px;
  height: 12px;
  left: 0;
  display: inline-block;
  position: absolute;
  background-color: #ffffff;
  background-repeat: no-repeat;
  background-position: center center;
  background-size: 7px 7px;
  margin-top: 2px;
}

.c6 {
  padding: 1px;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
}

.c2 {
  width: 12px;
  height: 12px;
  margin: 0;
  position: absolute;
  top: 0;
  left: 0;
  opacity: 0;
}

.c2:focus ~ .c5,
.c2:active ~ .c5 {
  border-width: 1px;
  border-style: dotted;
  padding: 0;
}

.c2:disabled {
  color: #848584;
}

.c2:checked + .c3 {
  background-image: url('test-file-stub');
}

.c2:checked .c1:disabled + .c3 {
  background-image: url('test-file-stub'),url('test-file-stub');
  background-size: 7px 7px,2px 2px;
}

.c2:disabled + .c3 {
  background-color: #dfdfdf;
}

.c0 {
  display: inline-block;
  height: 15px;
  line-height: 1.5;
  position: relative;
  margin: 4px 0px;
  padding-left: 20px;
}

<div>
  <label
    class="c0"
  >
    <input
      class="c1 c2"
      type="checkbox"
    />
    <span
      class="c3 c4"
    />
    <span
      class="c5 c6"
    />
  </label>
</div>
`;
